@@ -21,6 +21,8 @@ The following bugs have been fixed in the 1.4.2 release.
 <no id>	fix bug in MailDateFormat parsing in non-lenient mode
 <no id>	add mail.mime.multipart.allowempty system property to handle (illegal)
 	empty multiparts (see javax.mail.internet.MimeMultipart)
+<no id>	add mail.mime.multipart.ignoreexistingboundaryparameter system property
+	to allow parsing multiparts with incorrect boundary parameters
 
 
 		  CHANGES IN THE 1.4.1 RELEASE
